# sfxc

./: Ingrid.tex  Makefile  Notification.wsdl  Notification_services.py  Notification_services_server.py  Notification_services_types.py  README  TranslationNode.wsdl  TranslationNodeNotification.py  TranslationNodeNotification.wsdl  TranslationNodeNotification_services.py  TranslationNodeNotification_services_server.py  TranslationNodeNotification_services_types.py  TranslationNodeRequest.py  TranslationNodeService.py  TranslationNode_mark5.py  TranslationNode_services.py  TranslationNode_services_server.py  TranslationNode_services_types.py  TranslationNode_vex.py  benchmark.cc  benchmark.h  benchmarks.tex  biblio.bib  btail.py  channel_extractor1.h  channel_extractor_brute_force.cc  channel_extractor_brute_force.h  channel_extractor_interface.h  channel_extractor_lookup_table.cc  compile.sh  conclusion.tex  configure.in  correlator.tex  data.inp  drawer.py  edbkps.sty  experiment_data.inp  extract_progress_data.py  fileutils.py  (+28 more)
.plugins/org.eclipse.ui.workbench/: workbench.xml
autobahn_cli/: README  UserAccessPointService_client.py  UserAccessPointService_messages.py  UserAccessPointService_services.py  UserAccessPointService_services_types.py  autobahn_cli.py  autobahn_proxy.py
docs/: commands.cls  das3.txt  webservices.dvi  webservices.tex
docs/figures/: grid.eps
docs/files/: appendix.tex  intro.tex  references.tex.backup  running_service.tex  tn.tex  tn_client.tex  tn_notification.tex  tn_service.tex  web_service.tex.backup
fringefit/: ffit.py  parameters.py  sfxcdata_utils.py  simple_fit.py  update_vex.py  vex_time.py
img/: NetworkConnections.odg  NetworkConnections.ps  Network_correlator.eps  VLBI.eps  VLBI.odg  VLBI.ps  mapping.eps  timing.eps
include/: Abstract_manager_node.h  Bits_to_float_converter.h  Buffer.h  Channel_extractor_mark4.h  Control_parameters.h  CorrelationCore.h  Correlator_node.h  Data_reader2buffer.h  Data_reader_buffer.h  Data_reader_file.h  DelayCorrection.h  Delay_table_akima.h  Input_node.h  Integration_slice.h  Log_writer.h  Log_writer_mpi.h  MPI_Transfer.h  Manager_node.h  Mark4_header.h  Multiple_data_readers_controller.h  Output_node.h  Queue_buffer.h  Semaphore_buffer.h  Single_data_reader_controller.h  Single_data_writer_controller.h  Time_slicer.h  Uvw_model.h  abstract_manager_node.h  bits_to_float_converter.h  buffer.h  buffer2data_writer.h  channel_extractor.h  channel_extractor_impl.h  channel_extractor_mark4.h  control_parameters.h  correlation_core.h  correlator_node.h  data_reader2buffer.h  data_reader_buffer.h  data_reader_dnfp.h  (+34 more)
include/Tasklet/: Exception.h  Tasklet.h  Tasklet_manager.h  Tasklet_worker.h
include/tasklet/: component.h  tasklet.h  tasklet_manager.h  tasklet_pool.h  tasklet_worker.h
lib/: Makefile.am  Makefile.libs
lib/calc10/src/: Makefile.am
lib/common/: Makefile  Makefile.am
lib/common/src/: backtrace.h  demangler.cc  exception.cc  exception.h  exception_indexoutofbound.h  thread.cc
lib/containers/: Makefile
lib/containers/src/: memory_pool.h  pc_buffer.h  pc_queue.h  threadsafe_queue.h
lib/gsl/: Makefile.am
lib/netlib/: Makefile
lib/netlib/src/: interface.cc  network.cc
lib/testunit/: Makefile
lib/testunit/src/: Test_aclass.cc  Test_aclass.h  Test_aclass.os  Test_exception.h
lib/vex_parser/: Makefile.am
lib/vex_parser/vex_parser/: configure.in
lib/vex_parser/vex_parser/lib/: vex_parser.cc  vex_parser.h  vex_scanner.cc
mk5read/: Makefile  mk5read.c  mk5read.h  mk5udp.c  vsnread.c
sfxc/: configure.in
sfxc-gui/: asyncsubprocess.py  autocorr.py  cordata.py  evlbi.py  fringeplot.py  progress.py  progress.ui  sfxc-gui.py  subprocess.py  weightplot.py
sfxc/include/: abstract_manager_node.h  aips_cal.h  bandpass.h  bit2float_worker.h  buffer2data_writer.h  coherent_dedispersion.h  control_parameters.h  controller.h  correlation_core.h  correlation_core_phased.h  correlation_core_pulsar.h  correlator_node.h  sfxc_math.h  (+19 more)
site/: Makefile  index.html  index2.html  menubar.js  server.py
src/: Abstract_manager_node.cc  Bits_to_float_converter.cc  Channel_extractor_mark4.cc  Control_parameters.cc  CorrelationCore.cc  Correlator_node.cc  Correlator_node_controller.cc  Data_reader_file.cc  Data_writer_file.cc  DelayCorrection.cc  Delay_table_akima.cc  Input_node.cc  Input_node_controller.cc  Integration_slice.cc  Log_node.cc  Log_node_controller.cc  Log_writer.cc  Log_writer_cout.cc  Log_writer_file.cc  Log_writer_mpi.cc  MPI_Transfer.cc  Makefile.am  Manager_node.cc  Manager_node_controller.cc  Multiple_data_readers_controller.cc  Multiple_data_writers_controller.cc  Node.cc  Output_node.cc  Output_node_controller.cc  Single_data_reader_controller.cc  Single_data_writer_controller.cc  Timer.cc  Uvw_model.cc  abstract_manager_node.cc  bits_to_float_converter.cc  channel_extractor_mark4.cc  component.cc  control_parameters.cc  correlation_core.cc  correlator_node.cc  (+37 more)
src/Tasklet/: Tasklet.cc  Tasklet_manager.cc  Tasklet_pool.cc  Tasklet_worker.cc  Thread.cc
src/multicore/: Makefile.am  PI_with_input_readers
src/tasklet/: tasklet_manager.cc  tasklet_pool.cc  tasklet_worker.cc
test/: Makefile.am  test_Control_parameters.cc  test_Correlator_node.cc  test_Data_reader_TCP.cc  test_Input_node.cc  test_Input_node.py  test_Output_node.cc  test_Time_slicer.cc  test_Transfer_control_parameters.cc  test_channel_extractor.cc  test_control_parameters.cc  test_data_reader_tcp.cc  test_data_reader_tcp.py  test_input_node.cc  test_input_node_with_delay_correction.cc  test_input_node_with_delay_correction.py  test_output_node.cc  test_transfer_control_parameters.cc  test_transfer_control_parameters.py
tmpdata/: status_file_json.txt
utils/: Makefile.am  analyse_fringes.cc  analyse_mark4_file.cc  create_delay_function.cc  generate_uvw_coordinates.cc  gnuplot_i.cc  gnuplot_i.h  print_headers.cc  produce_fringe.cc  produce_html_plotpage.cc  produce_output_graphs.cc  run_sfxc.py  vex2ccf.cc
utils/delay/: Makefile.am  generate_delay_model.cc
vex/: MANIFEST  MultiDict.py  setup.py  vex.py
(+86 files in other folders)
