dnl Process this file with autoconf to produce a configure script.
AC_INIT(JIVE software correlator, 0.0.3)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(sfxc, 0.0.2)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_F77
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_YACC

AM_PROG_LEX

AC_LANG_CPLUSPLUS

dnl ----- Checks for libraries.
PKG_CHECK_MODULES(fftw3, fftw3)

CXXFLAGS="$CXXFLAGS $fftw3_CFLAGS"
LDFLAGS="$LDFLAGS $fftw3_LIBS"


dnl ---- This may be needed for the library part of boost...
dnl PKG_CHECK_MODULES(boost, boost)
dnl AC_SUBST(boost_CFLAGS)
dnl AC_SUBST(boost_LIBS)


dnl ---- checking for jsoncpp ----
dnl ---- I praise that json authors decide to add their 
dnl ---- pkg-config file
PKG_CHECK_MODULES(jsoncpp, jsoncpp)
CXXFLAGS="$CXXFLAGS $jsoncpp_CFLAGS"
LDFLAGS="$LDFLAGS $jsoncpp_LIBS"

dnl --- this is an abuse to add the -lm flag :)
AC_CHECK_LIB(m, sin)

dnl export these variable (so Makefile substitutions
dnl can be made. 
AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile
          lib/Makefile
          lib/vex_parser/Makefile
          src/Makefile
          src/multicore/Makefile
          test/Makefile
          include/Makefile
          utils/Makefile
          utils/vex_parser/Makefile
          doc/Makefile
          doc/html/Makefile
          lib/calc10/Makefile
          lib/calc10/lib/Makefile
          lib/calc10/src/Makefile
         )
