dnl Process this file with autoconf to produce a configure script.
AC_INIT(Vex parser, 0.0.2)
AM_INIT_AUTOMAKE(vex_parser, 0.0.2)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_YACC
AM_PROG_LEX

AC_LANG_CPLUSPLUS

pythonlib_default="no"
AC_ARG_ENABLE(pythonlib, 
              [  --enable-pythonlib     [no/yes] compile the python library],
              , 
              enable_pythonlib=$pythonlib_default)
if test "x$enable_pythonlib" = "xyes"; then
  dnl Check for python
  AM_PATH_PYTHON(2.4)
  dnl Check for boost.python
  PKG_CHECK_MODULES(BOOST_PYTHON_LIB, boost.python)
  AC_SUBST(BOOST_PYTHON_LIB_CFLAGS)
  AC_SUBST(BOOST_PYTHON_LIB_LIBS)
fi
AM_CONDITIONAL(BUILD_PYTHONLIB, test "x$enable_pythonlib" = "xyes")

dnl export these variable (so Makefile substitutions can be made). 
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(vex_parser.pc
          Makefile
          include/Makefile
          include/vex/Makefile
          lib/Makefile
          src/Makefile
          python/Makefile
          test/Makefile
         )

